refactor: Rename all whatsapp references to WaveMeet
- Updated container names from whatsapp-* to wavemeet-*
- Changed database name from whatsapp_db to wavemeet_db
- Updated package names and descriptions
- Changed Kubernetes namespace from whatsapp to wavemeet
- Updated frontend branding from WhatsApp to WaveMeet
- Updated all documentation references
- Changed all color variables from whatsapp-* to wavemeet-*

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "whatsapp-backend",
+  "name": "wavemeet-backend",
   "version": "1.0.0",
-  "description": "WhatsApp-like backend application with real-time messaging",
+  "description": "WaveMeet backend application with real-time messaging",
   "main": "src/server.js",
   "type": "module",
   "scripts": {
