--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ FRONTEND_URL=http://localhost:3000
 # Database Configuration
 DB_HOST=postgres
 DB_PORT=5432
-DB_NAME=whatsapp_db
+DB_NAME=wavemeet_db
 DB_USER=postgres
 DB_PASSWORD=postgres
 
