--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,10 @@
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "firebase-admin": "^11.11.0",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
