--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -29,7 +29,7 @@ jobs:
         run: cd frontend && npm install
       
       - name: Run ESLint
-        run: cd frontend && npm run lint
+        run: cd frontend && npm run lint -- --max-warnings 0
         continue-on-error: true
       
       - name: Run tests (if configured)
