🔧 Fix backend build script
- Changed build script from 'tsc' to echo statement
- Backend is JavaScript, not TypeScript, so TypeScript compilation was failing
- Build now completes successfully without errors
- Resolves GitHub Actions build failure

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/server.js",
     "test": "jest",
     "lint": "eslint src/**/*.js",
-    "build": "tsc"
+    "build": "echo 'Backend build complete - JavaScript runtime ready'"
   },
   "keywords": [
     "messaging",
